<resources>
    <string name="app_name">MovieReviewApplication</string>
    <string name="english">English</string>
    <string name="language">Language</string>
    <string name="chinese">Chinese</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="not_suitable_for_all_audience">Not suitable for all audience</string>
    <string name="language_used">Language used</string>
    <string name="violence">Violence</string>
    <string name="submit">Submit</string>
    <string name="release_date">Release Date</string>
    <string name="indian">Indian</string>
    <string name="malay">Malay</string>
    <string name="name_hint">Enter the title of movie</string>
    <string name="description_hint">Enter a short description of the movie</string>
    <string name="release_hint">Enter release date</string>
</resources>