<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:id="@+id/Name" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:id="@+id/NameInput"
        android:hint="@string/name_hint"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:id="@+id/Description" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:id="@+id/DescriptionInput"
        android:hint="@string/description_hint"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language"
        android:id="@+id/Language"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/languagePick">
        <RadioButton
            android:id="@+id/englishCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/chineseCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chinese"/>
        <RadioButton
            android:id="@+id/malayCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/malay"/>
        <RadioButton
            android:id="@+id/indianCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/indian"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/release_date"
        android:id="@+id/ReleaseDate"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:id="@+id/ReleaseDateInput"
        android:hint="@string/release_hint"/>

    <CheckBox
        android:id="@+id/chkUnsuitable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_suitable_for_all_audience" />

    <LinearLayout
        android:id="@+id/suitableCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <CheckBox
            android:id="@+id/ViolenceCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/violence"
            android:visibility="gone"
            />

        <CheckBox
            android:id="@+id/LanguageCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/language_used"
            android:visibility="gone"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/btnSubmit"/>

</LinearLayout>
